【YCSC】v2.0版【P-E1】-ESP32 S3-AI-CAM-V1.1，初始提交

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -99,6 +99,8 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ESP32_LCD)
     set(BOARD_TYPE "bread-compact-esp32-lcd")
     set(LVGL_TEXT_FONT ${FONT_PUHUI_COMMON_14_1})
     set(LVGL_ICON_FONT ${FONT_AWESOME_14_1})
+elseif(CONFIG_BOARD_TYPE_YCSC_ESP_S3_CAM_HI)
+    set(BOARD_TYPE "ycsc-esp-s3cam-hi")
 elseif(CONFIG_BOARD_TYPE_DF_K10)
     set(BOARD_TYPE "df-k10")
     set(LVGL_TEXT_FONT ${FONT_PUHUI_BASIC_20_4})
